--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,14 @@ dependencies = [
     "python-bitcoinlib>=0.10.0",
 ]
 
+[dependency-groups]
+dev = [
+    "pytest>=7.0",
+    "pytest-asyncio>=0.21",
+    "ruff>=0.1.0",
+    "mypy>=1.0",
+]
+
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
@@ -48,7 +56,7 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
-ignore = ["E501"]
+ignore = ["E501", "N801"]
 
 [tool.mypy]
 python_version = "3.10"
