chore: update project config (pyproject.toml, uv.lock)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ dev = [
 ]
 
 [project.scripts]
-minesploit = "repl.shell:main"
+minesploit = "minesploit.repl.shell:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
