feat: add sv2python as dependency via uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,67 +1,40 @@
-[build-system]
-requires = ["setuptools>=65.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "minesploit"
 version = "0.1.0"
 description = "Bitcoin mining security research framework for white hat hackers"
 readme = "README.md"
-license = {text = "GPL-3.0"}
+license = { text = "GPL-3.0" }
 authors = [
-    {name = "Minesploit Contributors", email = "contact@minesploit.io"}
+  { name = "Minesploit Contributors", email = "contact@minesploit.io" }
 ]
 requires-python = ">=3.10"
 classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Information Technology",
-    "Intended Audience :: Security Professionals",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Topic :: Security",
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Information Technology",
+  "Intended Audience :: Security Professionals",
+  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Topic :: Security",
 ]
 dependencies = [
-    "python-bitcoinlib>=0.10.0",
-    "requests>=2.28.0",
+  "base58>=1.0.0",
+  "python-bitcoinlib>=0.10.0",
+  "requests>=2.28.0",
+  "sv2python",
 ]
 
-[dependency-groups]
-dev = [
-    "pytest>=7.0",
-    "pytest-asyncio>=0.21",
-    "ruff>=0.1.0",
-    "mypy>=1.0",
-]
+[tool.uv]
+sources = { sv2python = { path = "vendors/sv2-ffi/python", editable = true } }
 
-[project.optional-dependencies]
-build = ["pyinstaller>=6.0"]
-dev = [
-    "pytest>=7.0",
-    "pytest-asyncio>=0.21",
-    "ruff>=0.1.0",
-    "mypy>=1.0",
-]
-
-[project.scripts]
-minesploit = "minesploit.repl.shell:main"
+[tool.setuptools]
+py-modules = ["sv2"]
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["minesploit*", "repl*"]
 
-[tool.ruff]
-line-length = 100
-target-version = "py310"
-
-[tool.ruff.lint]
-select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
-ignore = ["E501", "N801"]
-
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = false
+[tool.setuptools.package-dir]
+sv2 = "vendors/sv2-ffi/python"
